--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         </li>
                     </ul>
                     <div class="legal">
-                        &copy; Built by José Bellorín and designed by Jonas Schmedtmann.
+                        &copy; Built by José Perillo and designed by Jonas Schmedtmann.
                     </div>
                 </nav>
 
